--- a/app/templates/manage/manager_profile.html
+++ b/app/templates/manage/manager_profile.html
@@ -103,96 +103,85 @@
                             aria-label="Закрыть"></button>
                     </div>
                     <div class="offcanvas-body">
-                            <h6 class="card-subtitle mb-2 text-muted"><b>{{ order.FCs }}</b></h6>
-                            <h6 class="card-subtitle mb-2 text-muted"><b>{{ order.email }}</b></h6>
-                            <p class="card-text">
-                                Пункт отправления: <b>{{ order.departure_point }}</b><br>
-                                Пункт прибытия: <b>{{ order.arrival_point }}</b><br>
-                                Тип доставки: <b>{{ order.order_type }}</b><br>
-                                {% if order.order_type == "Пассажирская" %}
-                                Количество пассажиров: <b>{{ order.amount}}</b><br>
-                                {% else %}
-                                Транспорт для доставки: <b>{{ order.auto}}</b><br>
-                                {% endif %}
-                                Остановки: <b>{{order.stops}}</b>
-                            </p>
-                            <div class="dropdown mt-3">
-                                <button class="btn btn-disabled" type="button" id="dropdownMenuButton"
-                                    data-bs-toggle="">
-                                    Статус: <b>{{order.state}}</b>
-                                </button>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    {% for stop in stops %}
-                                    <li><a href="{{ url_for('manage.bind_stop',stop_id=stop.id,order_id=order.id,t='p') }}">{{
-                                            stop.name }}</a>
-                                    </li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                            <div class="btn-group dropend">
-                                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Управление
-                                </button>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <button type="button" class="btn btn-outline-success" id="liveToastBtn">
-                                            <a class="dropdown-item"
-                                                href="{{ url_for('manage.accept_order',id=order.id) }}">
-                                                Принять
-                                            </a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <button type="button" class="btn btn-outline-warning" id="liveToastBtn">
-                                            <a class="dropdown-item"
-                                                href="{{ url_for('manage.decline_order',id=order.id) }}">
-                                                Отклонить
-                                            </a>
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <button type="button" class="btn btn-outline-danger" id="liveToastBtn">
-                                            <a class="dropdown-item"
-                                                href="{{ url_for('manage.delete_order',id=order.id) }}">
-                                                Удалить
-                                            </a>
-                                        </button>
-                                    </li>
-                                </ul>
-                            </div>
-                            <p>
-                            <div class="btn-group dropend">
-                                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Добавить остановку
-                                </button>
-                                <ul class="dropdown-menu">
-                                    {% for stop in stops %}
-                                    <li><a href="{{ url_for('manage.bind_stop',stop_id=stop.id,order_id=order.id,t='p') }}">{{
-                                            stop.name }}</a>
-                                    </li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                            </p>
-                            <p>
-                                <div class="btn-group dropend">
-                                    {% if order.stops %}
-                                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
-                                        aria-expanded="false">
-                                        Удалить остановку
+                        <h6 class="card-subtitle mb-2 text-muted"><b>{{ order.FCs }}</b></h6>
+                        <h6 class="card-subtitle mb-2 text-muted"><b>{{ order.email }}</b></h6>
+                        <p class="card-text">
+                            Пункт отправления: <b>{{ order.departure_point }}</b><br>
+                            Пункт прибытия: <b>{{ order.arrival_point }}</b><br>
+                            Тип доставки: <b>{{ order.order_type }}</b><br>
+                            {% if order.order_type == "Пассажирская" %}
+                            Количество пассажиров: <b>{{ order.amount}}</b><br>
+                            {% else %}
+                            Транспорт для доставки: <b>{{ order.auto}}</b><br>
+                            {% endif %}
+                            Остановки: <b>{{order.stops}}</b><br>
+                            Статус: <b>{{order.state}}</b>
+                        </p>
+                        <div class="btn-group dropend">
+                            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Управление
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <button type="button" class="btn btn-outline-success" id="liveToastBtn">
+                                        <a class="dropdown-item"
+                                            href="{{ url_for('manage.accept_order',id=order.id) }}">
+                                            Принять
+                                        </a>
                                     </button>
-                                    <ul class="dropdown-menu">
-                                        {% for stop in order.stops %}
-                                        <li><a href="{{ url_for('manage.remove_stop',stop_id=stop.id,order_id=order.id,t='p') }}">{{
-                                                stop.name }}</a>
-                                        </li>
-                                        {% endfor %}
-                                    </ul>
-                                    {% endif %}
-                                </div>
-                            </p>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn btn-outline-warning" id="liveToastBtn">
+                                        <a class="dropdown-item"
+                                            href="{{ url_for('manage.decline_order',id=order.id) }}">
+                                            Отклонить
+                                        </a>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn btn-outline-danger" id="liveToastBtn">
+                                        <a class="dropdown-item"
+                                            href="{{ url_for('manage.delete_order',id=order.id) }}">
+                                            Удалить
+                                        </a>
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                        <p>
+                        <div class="btn-group dropend">
+                            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Добавить остановку
+                            </button>
+                            <ul class="dropdown-menu">
+                                {% for stop in stops %}
+                                <li><a href="{{ url_for('manage.bind_stop',stop_id=stop.id,order_id=order.id,t='p') }}">{{
+                                        stop.name }}</a>
+                                </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        </p>
+                        <p>
+                        <div class="btn-group dropend">
+                            {% if order.stops %}
+                            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Удалить остановку
+                            </button>
+                            <ul class="dropdown-menu">
+                                {% for stop in order.stops %}
+                                <li><a
+                                        href="{{ url_for('manage.remove_stop',stop_id=stop.id,order_id=order.id,t='p') }}">{{
+                                        stop.name }}</a>
+                                </li>
+                                {% endfor %}
+                            </ul>
+                            {% endif %}
+                        </div>
+                        </p>
                     </div>
                 </div>
                 {% endfor %}
